# draft-relance

./: README.md
backend/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202403211200_initial.py  202410081100_patient_tenant_grants.py
backend/casbin/: model.conf  seed_policy.csv
backend/src/: __init__.py  app.py  main.py
backend/src/core/: casbin_enforcer.py  db.py  errors.py  http.py  logging.py  observability.py  security.py  settings.py
backend/src/features/clinical_records/: README.md
backend/src/features/dictation/: README.md
backend/src/features/dictation/interfaces/: router.py
backend/src/features/onboarding/application/: invitations.py
backend/src/features/onboarding/infra/: keycloak_admin.py
backend/src/features/onboarding/interfaces/: router.py
backend/src/features/scheduling/application/: command_handlers.py  commands.py  queries.py  query_handlers.py
backend/src/features/scheduling/domain/: entities.py  events.py  value_objects.py
backend/src/features/scheduling/infra/: mappers.py  models.py  repositories.py
backend/src/features/scheduling/interfaces/: dto.py  router_commands.py  router_queries.py
backend/src/features/sharing/: README.md
backend/tests/: test_availabilities_doc.py  test_health.py
frontend/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: LoginCard.tsx
scripts/: keycloak-setup.sh
(+30 files in other folders)
